--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "add": "^2.0.6",
+    "pnpm": "^8.3.1",
     "vue": "^3.2.47",
     "vue-carousel": "^0.18.0",
     "vue-ssr-carousel": "^2.1.0",
     "vue3-carousel": "^0.2.16",
     "yarn": "^1.22.19"
+  },
+  "devDependencies": {
+    "npm-start-command": "^1.0.1"
   }
 }
